<?xml version="1.0"?>
<package format="2">
  <name>turtle_1</name>
  <version>1.0.0</version>
  <description>The turtle_1 package</description>
  <maintainer email="backsapce@hotmail.com">backsapce</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>

  <export>
  </export>
</package>
